Add linter files

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,7 +7,7 @@
       true,
       {
         "ignoreAtRules": [
-          "tailwinkd",
+          "tailwind",
           "apply",
           "variants",
           "responsive",
